connected some of the api endpoints with the frontend

--- a/src/components/EditableProfileCard.module.css
+++ b/src/components/EditableProfileCard.module.css
@@ -53,7 +53,7 @@
 }
 
 .leftColumnButton:disabled {
-  background: var(--accent-disabled);
+  background: var(--disabled);
 }
 
 .centerColumn {
@@ -76,17 +76,6 @@
   width: 20%;
 }
 
-.centerColumnLineSave button {
-  width: 100%;
-  padding: 10px 0;
-  background: var(--accent);
-  outline: none;
-  border: none;
-
-  border-radius: 12px;
-  color: white;
-}
-
 .input {
   outline: none;
   border: none;
@@ -95,7 +84,7 @@
 
   max-width: 40%;
 
-  border: 1px solid var(--accent-disabled);
+  border: 1px solid var(--disabled);
   border-radius: 12px;
 
   margin-right: 5px;
@@ -106,7 +95,7 @@
   outline: none;
   border: none;
 
-  border: 1px solid var(--accent-disabled);
+  border: 1px solid var(--disabled);
   border-radius: 12px;
   width: 90%;
   height: 100px;
@@ -149,7 +138,7 @@
 }
 
 .rightColumnSlugButton:disabled {
-  background: var(--accent-disabled);
+  background: var(--disabled);
 }
 
 .error {
